--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-raqmiyat-custom-notification" version="0.0.2" 
+<plugin id="cordova-plugin-raqmiyat-custom-notification" version="0.0.3" 
     xmlns="http://apache.org/cordova/ns/plugins/1.0" 
     xmlns:android="http://schemas.android.com/apk/res/android">
     <name>CustomNotification</name>
@@ -9,10 +9,10 @@
     <platform name="android">
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="CustomNotification">
-                <param name="android-package" value="cordova.plugin.raqmiyat.custom-notification" />
+                <param name="android-package" value="cordova.plugin.raqmiyat.custom.notification" />
             </feature>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
-        <source-file src="src/android/CustomNotification.java" target-dir="src/cordova/plugin/raqmiyat/custom/notification/CustomNotification" />
+        <source-file src="src/android/CustomNotification.java" target-dir="src/cordova/plugin/raqmiyat/custom/notification" />
     </platform>
 </plugin>
