--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-raqmiyat-custom-notification" version="0.0.3" 
+<plugin id="cordova-plugin-raqmiyat-custom-notification" version="0.0.4" 
     xmlns="http://apache.org/cordova/ns/plugins/1.0" 
     xmlns:android="http://schemas.android.com/apk/res/android">
     <name>CustomNotification</name>
@@ -9,7 +9,7 @@
     <platform name="android">
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="CustomNotification">
-                <param name="android-package" value="cordova.plugin.raqmiyat.custom.notification" />
+                <param name="android-package" value="cordova.plugin.raqmiyat.custom.notification.CustomNotification" />
             </feature>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
