--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-raqmiyat-custom-notification" version="0.0.4" 
+<plugin id="cordova-plugin-raqmiyat-custom-notification" version="0.0.5" 
     xmlns="http://apache.org/cordova/ns/plugins/1.0" 
     xmlns:android="http://schemas.android.com/apk/res/android">
     <name>CustomNotification</name>
@@ -13,6 +13,7 @@
             </feature>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
+        <source-file src="src/layout/my_dialog.xml" target-dir="res/layout" />
         <source-file src="src/android/CustomNotification.java" target-dir="src/cordova/plugin/raqmiyat/custom/notification" />
     </platform>
 </plugin>
